HBASE-20723 Custom hbase.wal.dir results in data loss because we write recovered edits into a different place than where the recovering region server looks for them
Conflicts:
	hbase-server/src/main/java/org/apache/hadoop/hbase/wal/DefaultWALProvider.java
	hbase-server/src/main/java/org/apache/hadoop/hbase/wal/WALSplitter.java